Fixed gradle compile issue with .toList() method not found